--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ div, ul, li{
 .content{
     margin-top: 92px;
     background: #E5E5E5;
-    padding-bottom: 98px;
+    padding-bottom: 100px;
 }
 .products{
     height: 258px;
@@ -64,6 +64,9 @@ div, ul, li{
     flex-direction: column;
     justify-content: space-between;
 }
+.card-product.selected{
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+}
 .img-product{
     height: 87px;
     width: 144px;
@@ -83,6 +86,16 @@ div, ul, li{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
+.price-plus-icon{
+    display: flex;
+    justify-content: space-between;
+}
+.check-selection{
+    color: #32B72F;
+}
+.not-selected{
+    display: none;
+}
 .bottom-button{
     background: #FFFFFF;
     position: fixed;
@@ -91,4 +104,24 @@ div, ul, li{
     right: 0;
     height: 92px;
     z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.checkout{
+    width: 87.9%;
+    height: 61px;
+    border: none;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #FFFFFF;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+.checkout.disabled{
+    background: #CBCBCB;
+}
+.checkout.enabled{
+    background: #32B72F;
+    font-weight: bold;
 }
