--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@ div, ul, li{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 3;
 }
+.move-back{
+    z-index: -1;
+}
 .title-top{
     color: #FFFFFF;
     font-family: 'Righteous', cursive;
@@ -108,6 +111,9 @@ div, ul, li{
     justify-content: center;
     align-items: center;
 }
+.move-back{
+    z-index: 0;
+}
 .checkout{
     width: 87.9%;
     height: 61px;
@@ -124,4 +130,71 @@ div, ul, li{
 .checkout.enabled{
     background: #32B72F;
     font-weight: bold;
+}
+.confirmation-box{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.info-box{
+    width: 82%;
+    height: 377px;
+    background: #50D074;
+    box-shadow: 0px 0px 10px 1px #000000 25%;
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 21px;
+    padding-left: 26px;
+    padding-right: 26px;
+    padding-bottom: 19px;
+}
+.title-info-box{
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    color: #FFFFFF;
+}
+.line-confirming{
+    display: flex;
+    justify-content: space-between;
+}
+.box-dynamic{
+    display: flex;
+    flex-direction: column;
+    height: 137px;
+    justify-content: space-between;
+}
+.text-confirming{
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    color: #FFFFFF;
+}
+.text-confirming.total{
+    font-weight: bold;
+}
+.final-check{
+    height: 52px;
+    width: 100%;
+    background: #FFFFFF;
+    border: none;
+    border-radius: 100px;
+    color: #50D074;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+}
+.not-confirming{
+    display: none;
 }
